# ebible-experiments

./: README.md
MT/experiments/Afro-Asiatic/Overall.Run1/: config.yml  diff_predictions.19000.xlsx  diff_predictions.23000.xlsx  effective-config-b0dcf13792.yml  scores-19000.csv  scores-23000.csv  test.src - Copy.txt  test.src.detok.txt  test.src.txt  test.trg-predictions.detok.txt.19000  test.trg-predictions.detok.txt.19000.scores.tsv  test.trg-predictions.detok.txt.23000  test.trg-predictions.detok.txt.23000.scores.tsv  test.trg.detok.txt  test.vref.txt  train.src.detok.txt  (+9 more)
MT/experiments/Afro-Asiatic/Overall.Run1.SMT.FastAlign/: config.yml
code/python/: bleu.py  copy_configs.py  copy_experiments.py  copy_selected.py  make_configs.py  modify_configs.py  pyproject.toml  summarize_configs.py  summarize_scores.py  summarize_scores_bybook.py  summarize_scores_multi.py  summarize_scores_overall.py  utilities.py
results/: by_book_scores_summary_2023_3_13_14h46.csv  by_book_scores_summary_2023_3_21_15h49.csv  by_book_scores_summary_2023_3_7_17h15.csv  by_book_scores_summary_2023_3_8_11h39.csv  by_book_scores_summary_2023_3_8_22h39.csv  by_book_scores_summary_2023_3_9_17h41.csv  overall_scores_summary_2023_3_13_14h45.csv  overall_scores_summary_2023_3_21_15h51.csv  overall_scores_summary_2023_3_7_17h11.csv  overall_scores_summary_2023_3_8_11h40.csv  overall_scores_summary_2023_3_8_22h39.csv  overall_scores_summary_2023_3_9_17h42.csv  scores_summary_2023_2_22_10h30.csv  scores_summary_2023_2_25_21h10.csv  scores_summary_2023_3_2_13h19.csv  scores_summary_2023_3_7_12h50.csv
(+3932 files in other folders)
